--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
     "passport": "^0.5.0",
@@ -37,6 +37,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.0.0",
