--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
-/backend/dist/
+# Backend - Node.js/NestJS
 /backend/node_modules/
+/backend/dist/
+/backend/.env
+/backend/*.log
+/backend/coverage/
+/backend/.DS_Store
+
+# Frontend - React
+/frontend/node_modules/
+/frontend/.env
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/build/
+/frontend/.DS_Store
+/frontend/.eslintcache
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+
+# Docker
+.env
+docker-compose.override.yml
+
+# IDE/Sistemas operativos
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+*.swm
+*.swl
+*.swk
+*.sw*~
+*.sw?
+Thumbs.db
+
+# Archivos de bloqueo de paquetes (se deben commitear según mejores prácticas modernas)
+# !/backend/package-lock.json
+# !/frontend/package-lock.json
