--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,11 @@
-FROM node:16
+FROM node:18.18.2
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install -g npm@latest && \
+    npm install --legacy-peer-deps
 
 COPY . .
 
