--- a/backend/package.json
+++ b/backend/package.json
@@ -9,29 +9,33 @@
     "start:prod": "node dist/main.js"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.0",
-    "bcrypt": "^5.1.0",
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
-    "mysql2": "^3.0.0",
-    "passport": "^0.6.0",
+    "mysql2": "^3.6.0",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "typeorm": "^0.3.12"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/node": "^18.0.0",
-    "ts-jest": "^29.0.0",
-    "ts-loader": "^9.4.0",
-    "ts-node": "^10.9.0",
-    "typescript": "^4.7.0"
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.3.9",
+    "@types/node": "^20.5.7",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.14.0",
+    "npm": ">=9.0.0"
   }
 }
